Fix zoom buttons on phones and implement horizontal scrolling

--- a/consentrecords/static/consentrecords/css/showPathways.css
+++ b/consentrecords/static/consentrecords/css/showPathways.css
@@ -55,6 +55,12 @@
 		margin: 10px;
 	}
 	
+	panel.pathway> .panel-fill div.pathway {
+		position: absolute;
+		overflow-x: scroll;
+		left: 40px;	/* dataLeftMargin */
+	}
+	
 	panel.pathway text {
 		text-decoration: none;
 		cursor: pointer;
@@ -69,11 +75,23 @@
 		height: 22px;
 		text-align: center;
 		color: #777;
+		align-items: flex-start;
+		background: #EEE; /* For browsers that do not support gradients */
+		background: -webkit-linear-gradient(#E2E2E2, #EEE, #f8f8f8); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(#E2E2E2, #EEE, #f8f8f8); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(#E2E2E2, #EEE, #f8f8f8); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(#E2E2E2, #EEE, #f8f8f8); /* Standard syntax */
+		border: 1px #AAA solid;
+		border-top-left-radius: 0px;
+		border-bottom-left-radius: 0px;
+		border-top-right-radius: 3px;
+		border-bottom-right-radius: 3px;
+		box-sizing: border-box;
 	}
 	
 	panel.pathway button.expand>span {
 		position: relative;
-		top: -3px;
+		top: -4px;
 		font-size: 24px;
 		line-height: 22px;
 	}
@@ -87,11 +105,23 @@
 		height: 22px;
 		text-align: center;
 		color: #AAA;
+		align-items: flex-start;
+		background: #EEE; /* For browsers that do not support gradients */
+		background: -webkit-linear-gradient(#E2E2E2, #EEE, #f8f8f8); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(#E2E2E2, #EEE, #f8f8f8); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(#E2E2E2, #EEE, #f8f8f8); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(#E2E2E2, #EEE, #f8f8f8); /* Standard syntax */
+		border: 1px #AAA solid;
+		border-top-left-radius: 3px;
+		border-bottom-left-radius: 3px;
+		border-top-right-radius: 0px;
+		border-bottom-right-radius: 0px;
+		box-sizing: border-box;
 	}
 	
 	panel.pathway button.contract>span {
 		position: relative;
-		top: -3px;
+		top: -4px;
 		font-size: 18px;
 	}
 	
@@ -101,6 +131,11 @@
 	
 	panel.pathway button.contract.disabled {
 		color: #AAA;
+	}
+	
+	panel.pathway svg {
+		position: absolute;
+		top: 0px;
 	}
 	
 	panel.confirm {
